--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.servlet.context-path=/ws-lab
 server.http2.enabled=true
 server.port=8090
+
+#CONEXÃO BANCO DE DADOS
+spring.datasource.url=jdbc:mysql://localhost:3306/lab?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rodrigo@99252001
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
